# panacea

./: .gitmodules  CMakeLists.txt
assets/meshes/: boss.glb  ghost.glb  moth.glb  muzzle.mtl  revolver.glb  rifle.glb  shotgun.glb
assets/shaders/: fog.frag
cmake/: EmbedFiles.cmake
src/: CMakeLists.txt  animations.hpp  boss.cpp  boss.hpp  enemy.cpp  enemy.hpp  game.cpp  game.hpp  hud.hpp  leaderboard.hpp  main.cpp  menu.cpp  menu.hpp  picosha2.h  player.cpp  player.hpp  scene.cpp  scene.hpp  settings.hpp  weapon.cpp  weapon.hpp
src/scenes/: forest.cpp  forest.hpp
